# Flamebreeder

./: .gitignore
app/: index.html  (+2 more)
breeding/: breeding.py  genome.py  inference.py  interpolation.py  pyproject.toml  server.py  timeform.py
breeding/stylegan2/: __init__.py  generator.py  mapping.py  synthesis.py
breeding/tests/: test_breeding.py  test_interpolation.py
datagen/: data  pyproject.toml
datagen/flamegen/: coloring.py  generate_batch.py  ifs.py  params.py  renderer.py  variations.py
datagen/flamegen/__pycache__/: ifs.affine_transform-18.py312.1.nbc  ifs.affine_transform-18.py312.nbi  ifs.chaos_game-29.py312.1.nbc  ifs.chaos_game-29.py312.nbi  (+38 more)
datagen/fractal_datagen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datagen/jwildfire/: 50dd6cfa-a4da-4daf-9b06-b268889d78b6.flame  59c0b635-af58-47c1-bc71-86e1beeecc74.flame  __init__.py  ce32283f-21e3-493a-bf80-f81c87c05c12.flame  flame_crossover.py  flame_mutator.py  flame_parser.py  flame_writer.py  generate_from_favorites.py  mutate_batch.py  render_batch.py  render_batch.sh  render_mutated.sh
datagen/preprocessing/: build_dataset.py  cluster_dataset.py  consolidate_dataset.py  quality_filter.py  resize_normalize.py
training/: export_onnx.py  pyproject.toml  train.py
training/configs/: default.yaml  smoke_test.yaml
training/data/: dataset.py
training/fractal_gan_training.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
training/model/: augment.py  discriminator.py  generator.py  losses.py
training/utils/: checkpoint.py  mps_compat.py
(+45 files in other folders)
